# MDToolkit

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
IO/: read_file.py
MDToolkit/: H2O_Graphene_OMIMPf6_system.py  create_structure.ipynb  current_analysis.ipynb  current_analysis.py  density_analysis.ipynb  development.py  diffusivity_analysis.ipynb  dipole_analysis.ipynb  log_file_analysis.ipynb  modify_structure.ipynb  paths.py  rdf_analysis.ipynb  test.py  troubleshooting.py  velocity_analysis.ipynb
MDToolkit/IO/: read_file.py  write_file.py
MDToolkit/analysis/: current.py  density.ipynb  density.py  diffusivity.py  dipole.py  functions.py  rdf.py  velocity.py
MDToolkit/custom_systems/: liquids.py  membranes.py
MDToolkit/data/: misc_objects.py  molecular_data.json  objects.py
MDToolkit/utils/: cutom_systems_utils.py  misc_utils.py  structure_file_utils.py
MDToolkit/viz/: dummy_plots.py
cpp/: CMakeLists.txt  bindings.cpp
cpp/include/: read_file.h
cpp/io/: read_file.cpp
data/: external_databases.py
mdtoolkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
utils/: structure_file_utils.py
