[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.12",
]
build-backend = "scikit_build_core.build"

[project]
name = "mdtoolkit"
version = "0.1.0"
description = "Molecular dynamics toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.scikit-build]
cmake.source-dir = "cpp"
build-dir = "build/{wheel_tag}"
wheel.packages = ["MDToolkit"]